--- a/home.html
+++ b/home.html
@@ -4,7 +4,7 @@
    <meta charset="UTF-8">
    <meta http-equiv="X-UA-Compatible" content="IE=edge">
    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-   <title>home</title>
+   <title>Trang chủ</title>
 
    <!-- font awesome cdn link  -->
    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css">
@@ -19,12 +19,12 @@
    
    <section class="flex">
 
-      <a href="home.html" class="logo">Educa.</a>
+      <a href="home.html" class="logo">English Test</a>
 
-      <form action="search.html" method="post" class="search-form">
+      <!-- <form action="search.html" method="post" class="search-form">
          <input type="text" name="search_box" required placeholder="search courses..." maxlength="100">
          <button type="submit" class="fas fa-search"></button>
-      </form>
+      </form> -->
 
       <div class="icons">
          <div id="menu-btn" class="fas fa-bars"></div>
@@ -35,8 +35,8 @@
 
       <div class="profile">
          <img src="images/pic-1.jpg" class="image" alt="">
-         <h3 class="name">shaikh anas</h3>
-         <p class="role">studen</p>
+         <h3 class="name">Name Admin</h3>
+         <p class="role">Admin</p>
          <a href="profile.html" class="btn">view profile</a>
          <div class="flex-btn">
             <a href="login.html" class="option-btn">login</a>
@@ -56,67 +56,49 @@
 
    <div class="profile">
       <img src="images/pic-1.jpg" class="image" alt="">
-      <h3 class="name">shaikh anas</h3>
-      <p class="role">studen</p>
-      <a href="profile.html" class="btn">view profile</a>
+      <h3 class="name">Name Admin</h3>
+      <p class="role">Admin</p>
+      <a href="profile.html" class="btn">Hồ sơ</a>
    </div>
 
    <nav class="navbar">
-      <a href="home.html"><i class="fas fa-home"></i><span>home</span></a>
-      <a href="about.html"><i class="fas fa-question"></i><span>about</span></a>
-      <a href="courses.html"><i class="fas fa-graduation-cap"></i><span>courses</span></a>
-      <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>teachers</span></a>
-      <a href="contact.html"><i class="fas fa-headset"></i><span>contact us</span></a>
+      <a href="home.html"><i class="fas fa-home"></i><span>Trang chủ</span></a>
+      <a href="about.html"><i class="fa-solid fa-chart-simple"></i><span>Thống kê</span></a>
+      <a href="courses.html"><i class="fa-solid fa-question"></i><span>Câu hỏi</span></a>
+      <a href="teachers.html"><i class="fas fa-chalkboard-user"></i><span>Đề thi</span></a>
+      <a href="contact.html"><i class="fas fa-headset"></i><span>Tổng quan</span></a>
    </nav>
 
 </div>
 
 <section class="home-grid">
 
-   <h1 class="heading">quick options</h1>
+   <h1 class="heading">quản lý</h1>
 
    <div class="box-container">
 
       <div class="box">
-         <h3 class="title">likes and comments</h3>
-         <p class="likes">total likes : <span>25</span></p>
-         <a href="#" class="inline-btn">view likes</a>
-         <p class="likes">total comments : <span>12</span></p>
-         <a href="#" class="inline-btn">view comments</a>
-         <p class="likes">saved playlists : <span>4</span></p>
-         <a href="#" class="inline-btn">view playlists</a>
+         <h3 class="title">quản lý bài thi</h3>
+         <a href="#" class="inline-btn" style="width: 240px;">danh sách câu hỏi</a>
+         <a href="#" class="inline-btn" style="width: 240px;">thêm câu hỏi</a>
       </div>
 
       <div class="box">
-         <h3 class="title">top categories</h3>
-         <div class="flex">
-            <a href="#"><i class="fas fa-code"></i><span>development</span></a>
-            <a href="#"><i class="fas fa-chart-simple"></i><span>business</span></a>
-            <a href="#"><i class="fas fa-pen"></i><span>design</span></a>
-            <a href="#"><i class="fas fa-chart-line"></i><span>marketing</span></a>
-            <a href="#"><i class="fas fa-music"></i><span>music</span></a>
-            <a href="#"><i class="fas fa-camera"></i><span>photography</span></a>
-            <a href="#"><i class="fas fa-cog"></i><span>software</span></a>
-            <a href="#"><i class="fas fa-vial"></i><span>science</span></a>
-         </div>
+         <h3 class="title">quản lý thí sinh</h3>
+         <a href="#" class="inline-btn" style="width: 240px;">danh sách thí sinh</a>
+         <a href="#" class="inline-btn" style="width: 240px;">thêm thí sinh</a>
       </div>
 
-      <div class="box">
-         <h3 class="title">popular topics</h3>
-         <div class="flex">
-            <a href="#"><i class="fab fa-html5"></i><span>HTML</span></a>
-            <a href="#"><i class="fab fa-css3"></i><span>CSS</span></a>
-            <a href="#"><i class="fab fa-js"></i><span>javascript</span></a>
-            <a href="#"><i class="fab fa-react"></i><span>react</span></a>
-            <a href="#"><i class="fab fa-php"></i><span>PHP</span></a>
-            <a href="#"><i class="fab fa-bootstrap"></i><span>bootstrap</span></a>
-         </div>
-      </div>
+      <!-- <div class="box">
+         <h3 class="title">quản lý thông báo</h3>
+         <a href="#" class="inline-btn" style="width: 240px; ">thông báo</a>
+         <a href="#" class="inline-btn" style="width: 240px;">thêm thông báo</a>
+      </div> -->
 
       <div class="box">
-         <h3 class="title">become a tutor</h3>
-         <p class="tutor">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Perspiciatis, nam?</p>
-         <a href="teachers.html" class="inline-btn">get started</a>
+         <h3 class="title">thống kê</h3>
+         <a href="#" class="inline-btn" style="width: 240px;">thống kê điểm</a>
+         <a href="#" class="inline-btn" style="width: 240px;">thống kê bài thi</a>
       </div>
 
    </div>
@@ -127,7 +109,7 @@
 
 <section class="courses">
 
-   <h1 class="heading">our courses</h1>
+   <h1 class="heading">câu hỏi</h1>
 
    <div class="box-container">
 
@@ -230,7 +212,7 @@
    </div>
 
    <div class="more-btn">
-      <a href="courses.html" class="inline-option-btn">view all courses</a>
+      <a href="courses.html" class="inline-option-btn">xem tất cả</a>
    </div>
 
 </section>
@@ -251,7 +233,7 @@
 
 <footer class="footer">
 
-   &copy; copyright @ 2022 by <span>mr. web designer</span> | all rights reserved!
+   &copy; copyright @ 2022 by <span>Duc Thien</span> | all rights reserved!
 
 </footer>
 
